[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Other/White16x16.png" type="Texture" id=1]
[ext_resource path="res://GUI/Inventory/ItemDrop.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other/ShadowWhite_16x16.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="CircleShape2D" id=3]
radius = 81.0

[node name="ItemDrop" type="RigidBody2D"]
collision_layer = 0
mode = 2
gravity_scale = 3.0
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="Sprite"]
visible = false
self_modulate = Color( 0, 0, 0, 0.196078 )
show_behind_parent = true
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DropHurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropHurtbox"]
self_modulate = Color( 1, 1, 1, 0.341176 )
shape = SubResource( 2 )
disabled = true

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Magnet"]
self_modulate = Color( 1, 1, 1, 0.168627 )
shape = SubResource( 3 )
disabled = true
[connection signal="body_entered" from="DropHurtbox" to="." method="_on_DropHurtbox_body_entered"]
[connection signal="body_entered" from="Magnet" to="." method="_on_Magnet_body_entered"]
